--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,17 @@
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-    text-align: left
+    font-size: xx-large;
+    text-align: left;
+    color: #4aaaa5;    
 }
 
 .about-me {
-    width: 300px;
-    height: auto;
+    width: 100%;
+    height: 250px;
+    background-color: #ffffff;
+    flex-direction: row;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header { 
@@ -26,18 +30,23 @@ h1 {
     height: 75px;
     text-align: center;
     float: left;
-    text-align: center;
-    text-align: bottom;
+    color: #ffffff;
+    line-height: 75px;
+    
 }
 
 .header-link {
     font-size: large;
     padding: 10px;
     margin-top: 50px;
+    color: #777777;
 }
 
 .header-link-group {
     text-align: center;
+    line-height: 75px;
+    float: right;
+
 }
 
 footer {
@@ -46,7 +55,9 @@ footer {
     text-align: center;
     height: 50px;
     bottom: 0;
-    border-top: 4px solid #4aaaa5;
+    border-top: 6px solid #4aaaa5;
+    color: #ffffff;
+    margin-top: 200px;
 }
 
 .wrapper {
@@ -55,3 +66,22 @@ footer {
     border: #dddddd;
 }
 
+body {
+    background-color: #ffffff;
+    font-size: 24px;
+    line-height: 32px;
+    color: #777;
+    margin: 0;
+    border-style: none;
+
+}
+
+img {
+    float: left;
+    margin-top: 65px;
+    padding-right: 15px;
+}
+
+.container {
+
+}
