--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ footer {
     bottom: 0;
     border-top: 8px solid #4aaaa5;
     color: #ffffff;
-    margin-top: 200px;
+    position: absolute; bottom: 0; left: 0; right: 0;
 }
 
 .wrapper {
@@ -96,9 +96,10 @@ button {
     height: 50px;
 }
 
-trivial {
-    height: 50px;
-    width: 50px;
-    float: left;
-    
+.trivial {
+   float: left;
+}
+
+.wow {
+    float: right;
 }
